--- a/styles/utility.css
+++ b/styles/utility.css
@@ -29,6 +29,18 @@
   gap: 1rem;
 }
 
+.flex {
+  display: flex;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+ 
+.grid {
+  display: grid;
+}
+
 @media (width >= 80em) {
   .container{
     --max-width: 80rem;
@@ -43,3 +55,4 @@
     grid-auto-columns: 1fr;
   }
 }
+
