--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -37,6 +37,7 @@
   padding: .5rem 1rem;
   font-size: var(--fs-sm);
 }
+
 .btn-md{
   padding: .75rem 1.5rem;
   font-size: var(--fs-base);
@@ -55,7 +56,7 @@
     content: "";
     position: absolute;
     border-radius: inherit;
-    inset: 0.09375rem;
+    inset: 1px;
     background-color: var(--bg-color);
   }
 
