--- a/styles/global.css
+++ b/styles/global.css
@@ -35,7 +35,7 @@
 
   --py-base: 1rem;
   --py-lg: 1.5rem;
-  --py-cl: 3rem;
+  --py-xl: 3rem;
 
   --px-lg: 1.5rem;
 }
@@ -46,6 +46,8 @@ html {
   font-size: var(--fs-base);
   line-height: 1.6;
   color: var(--text-color-primary);
+
+  overflow-x: hidden;
 }
 
 body{
